--- a/templates/app/index.html.twig
+++ b/templates/app/index.html.twig
@@ -4,4 +4,29 @@
 
 {% block body %}
 <h1>{{ website }}</h1>
+{% include '_navbar.html.twig' %}
+<script type="module">
+  import "./app.js";
+</script>
+<div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="https://fr.web.img6.acsta.net/pictures/23/11/29/16/34/1794966.jpg" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="https://fr.web.img4.acsta.net/pictures/23/12/04/09/21/5099430.jpg" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="https://lumiere-a.akamaihd.net/v1/images/image_121525d2.jpeg?region=0,0,540,810" class="d-block w-100" alt="...">
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
 {% endblock %}
